--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java'
     id 'org.flywaydb.flyway' version '9.8.1'
     id 'com.github.johnrengelman.shadow' version '8.1.1' 
+    id 'org.sonarqube' version '5.0.0.4638'
 }
 
 repositories {
